--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,7 +88,7 @@ jobs:
          
       # - name: Stop and remove  container if running
       #   run: |
-      #    docker ps -q --filter "name=mltest" | grep -q . && docker stop mltest && docker rm -fv mltest 
+      #    docker ps -q --filter "name=studentperformance-app" | grep -q . && docker stop studentperformance-app && docker rm -fv studentperformance-app 
        
       - name: Run Docker Image to serve users
         run: |
@@ -97,9 +97,10 @@ jobs:
         run: |
          docker system prune -f
 
-      - name: Debugging Variables
+      - name: Debug Secrets and Variables
         run: |
-          echo "AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION"
-          echo "Image URI=$IMAGE_URI"
-          echo "ECR_REPOSITORY_URI=$ECR_REPOSITORY_URI"
+          echo "AWS_ECR_LOGIN_URI=${{ secrets.AWS_ECR_LOGIN_URI }}"
+          echo "ECR_REPOSITORY_NAME=${{ secrets.ECR_REPOSITORY_NAME }}"
+          echo "Constructed Image URI=${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest"
+       
       
