add prune docker

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Clean up Docker system
         run: |
-          docker system prune -f
+          docker system prune -af
       
       
       - name: Pull latest images
